# FXtest

./: .coverage  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pytest_report.json  AGENT_KNOWLEDGE.md  API_VALIDATION.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_RC2.md  CONTRIBUTING.md  Dockerfile  README.md  RUNBOOK.md  analysis_output.txt  docker-compose.yml  dummy_data.csv  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_forex_extractor.bat  run_forex_extractor.command  run_quality_checks.py  run_tests.py  test_auditor.py  test_backend.py  test_currency_input.py  test_dummy_data.csv
.github/workflows/: quality.yml  quality_checks.yml
.streamlit/: config.toml
code/: __init__.py  app.py  main.py  requirements.txt  run_app.sh
code/.streamlit/: config.toml
code/core/: api_fetcher.py  auth.py  config_manager.py  data_serializer.py
code/pages/: 1_ℹ️_Help.py
code/ui/: components.py  styles.css
code/ui/views/: __init__.py  auditor.py  finder.py
logic/: __init__.py  a11y_checker.py  api_client.py  auditor.py  config.py  data_processor.py  facade.py  utils.py
src/forex/: __init__.py  a11y_checker.py  api_client.py  auditor.py  auth.py  cache.py  config.py  data_processor.py  facade.py  main.py  utils.py
src/forex/ui/: components.py  styles.css
src/forex/ui/tabs/: __init__.py  audit.py  extraction.py
src/forex_rate_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_a11y_extended.py  test_accessibility.py  test_api_client.py  test_api_client_extended.py  test_auditor.py  test_auditor_extended.py  test_cache_extended.py  test_data_processor.py  test_data_processor_extended.py  test_enhancements.py  test_facade.py  test_facade_extended.py  test_main.py  test_redis_integration.py  test_utils.py
